Bug 123501 - cannot print more than one page from journal
Summary: cannot print more than one page from journal
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: printing (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2006-03-12 16:12 UTC by Mikolaj Machowski
Modified: 2009-03-07 06:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikolaj Machowski 2006-03-12 16:12:52 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc3.4.3 
OS:                Linux

Even if journal content is longer than one page I cannot print it - only one page is printerd.
Comment 1 Reinhold Kainhofer 2006-11-02 19:09:43 UTC
Reassigning all KOrganizer bug reports and wishes to the newly created 
korganizer-devel mailing list.
Comment 2 Christophe Marin 2008-12-04 01:36:42 UTC
I get something almost similar in trunk : printing a multi pages journal results in : 
- the 1 printed page is blank (contains only the title)
- KOrganizer tries to print everything on the 2nd page (even if more than 2 pages would be necessary to print everything).
Comment 3 Ron Goodheart 2009-03-07 06:11:04 UTC
SVN commit 936135 by rgoodheart:

BUG: 123501

Checks for paging on each line and splits lines to fit on the page width so that long lines and paragraphs in the description will print properly. Rich text is converted to plain text for printing.




 M  +27 -15    calprintpluginbase.cpp  
 M  +2 -1      calprintpluginbase.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=936135