BUG: 123501

Checks for paging on each line and splits lines to fit on the page width so that long lines and paragraphs in the description will print properly. Rich text is converted to plain text for printing.



svn path=/trunk/KDE/kdepim/; revision=936135